<resources>
    <string name="app_name">Chess</string>
    <string name="promote_pawn_title">Promote pawn</string>
    <string name="move_timer">Move timer</string>
    <string name="player_color">Player color</string>
    <string name="single_player_multi_player">Single/Multi player</string>
    <string name="cpu_difficulty">Difficulty level</string>
    <string name="game_timer">Game timer</string>
    <string name="draw_no_material">no sufficient material</string>
    <string name="draw_moves_50">50 moves without capturing or pawn move</string>
    <string name="draw_repeated_3_times">the same board state repeated 3 times</string>
    <string name="draw_no_moves">no possible moves</string>
    <string name="checkmate">Checkmate</string>
    <string name="no_time">Time exceeded</string>
    <string name="no_timer">Off</string>
    <string name="draw_title">Draw</string>
    <string name="wins_message">won</string>
    <string name="black">Black</string>
    <string name="white">White</string>
    <string name="main_menu_label">MENU</string>
    <string name="new_game_label_finished">NEW GAME</string>
    <string name="new_game_title">Start new game</string>
    <string name="new_game_message">Do you want to start new game?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="main_title">Chess</string>
    <string name="resume_button">Resume</string>
    <string name="new_game_button">New game</string>
    <string name="more_games_button">More games</string>
    <string name="about_label">About</string>
    <string name="settings_rate_label">Rate this app</string>
    <string name="settings_other_apps_label">My other apps</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="player_name">Player</string>
    <string name="settings_screenOn_title">Keep screen on</string>
    <string name="settings_screenOn_desc">Screen will be not turned off during the game</string>
    <string name="ads_personalized_button">Personalized ads</string>
    <string name="ads_non_personalized_button">Non personalized ads</string>
    <string name="ads_consent_message">We keep this app free by showing Google ads. We can show you personalized ads, based on information that Google collects. Or we can show non-personalized ads, that may be less relevant for you. \nSee more here https://policies.google.com/technologies/partner-sites</string>
    <string name="ads_consent_settings">You can change your selection anytime in settings.</string>
    <string name="ads_status_full">Change ads status</string>
    <string name="ads_status">Ads status</string>
    <string name="dialog_rate_title">Rate this app</string>
    <string name="rate_message">If you like this app, please rate it in Google Play</string>
    <string name="dialog_close">Close</string>
    <string name="dialog_rate_negative">Skip</string>
    <string name="dialog_rate_positive">Rate</string>
</resources>
