<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:gravity="center"
    android:orientation="vertical"
    android:id="@+id/main_layout">

    <LinearLayout
        android:id="@+id/titleLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.35"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/mainTitleTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_title"
            android:textColor="@android:color/black"
            android:textSize="50sp"/>

    </LinearLayout>


    <Button
        android:id="@+id/mm_resume"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/resume_button"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintTop_toBottomOf="@id/titleLayout"
        app:layout_constraintLeft_toRightOf="@id/guideline1"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.5" />

    <Button
        android:id="@+id/mm_new_game"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:letterSpacing="0.05"
        android:text="@string/new_game_button"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintLeft_toRightOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@id/mm_resume"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.5" />


    <Button
        android:id="@+id/mm_more_games"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:text="@string/more_games_button"
        app:autoSizeTextType="uniform"
        app:autoSizePresetSizes="@array/menu_button_text_sizes"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintLeft_toRightOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@id/mm_new_game"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.5" />


    <ImageButton
        android:id="@+id/mm_theme"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitCenter"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintLeft_toRightOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@id/guideline3"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.15" />

    <ImageButton
        android:id="@+id/mm_settings"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitCenter"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintRight_toLeftOf="@id/guideline2"
        app:layout_constraintTop_toBottomOf="@id/guideline3"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline1"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline2"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline3"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8"/>

</androidx.constraintlayout.widget.ConstraintLayout>
